terraform/vpc.tf
provider "aws" {
  region = "eu-west-1"
}
resource "aws_vpc" "mainVPC" {
  cidr_block = "10.0.0.0/16"
}
resource "aws_subnet" "public_1" {
  vpc_id     = aws_vpc.mainVPC.id
  cidr_block = "10.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone = "eu-west-1a"
}
resource "aws_subnet" "public_2" {
  vpc_id     = aws_vpc.mainVPC.id
  cidr_block = "10.0.2.0/24"
  map_public_ip_on_launch = true
  availability_zone = "eu-west-1b"
}
resource "aws_internet_gateway" "mainIGW" {
  vpc_id = aws_vpc.mainVPC.id
}
